fixed border radius and spacing

--- a/src/components/alumni/oneschool.module.scss
+++ b/src/components/alumni/oneschool.module.scss
@@ -35,7 +35,7 @@
     width: 68%;
     min-height: 200px;
     background: $header-text;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 2px 8px 10px 2px rgba(0, 0, 0, 0.2);
 
     display: flex;
