--- a/src/components/campus/lab.module.scss
+++ b/src/components/campus/lab.module.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   justify-content: center;
 
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 2px 8px 10px 2px rgba(0, 0, 0, 0.2);
 
   .image {
@@ -18,7 +18,7 @@
   .text {
     display: flex;
     background: $header-text;
-    padding: 1em;
+    padding: 1em 0.7em;
     color: white;
     justify-content: space-between;
     cursor: pointer;
