--- a/src/components/exchange/oneyear.module.scss
+++ b/src/components/exchange/oneyear.module.scss
@@ -1,5 +1,2 @@
 @import "../shared/common";
 @import "../shared/oneyear_common";
-
-.oneYear {
-}
