--- a/src/components/meetalumni/oneparagraph.module.scss
+++ b/src/components/meetalumni/oneparagraph.module.scss
@@ -35,7 +35,7 @@
     width: 68%;
     min-height: 200px;
     background: $header-text;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 2px 8px 10px 2px rgba(0, 0, 0, 0.2);
 
     display: flex;
@@ -43,6 +43,6 @@
     justify-content: center;
     color: white;
 
-    padding: 0.5em;
+    padding: 0.5em 0;
   }
 }
